# nand2tetris

./: .gitignore
projects/01/: And.hdl  And16.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Not16.hdl  Or.hdl  Xor.hdl
projects/02/: ALU.hdl  Add16.hdl  FullAdder.hdl
projects/03/a/: Bit.hdl  DFF16.hdl  PC.hdl  Register.hdl
projects/04/fill/: Fill.asm
projects/04/mult/: Mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/06/hackasm/: Cargo.toml
projects/06/hackasm/src/: main.rs
projects/07/StackArithmetic/SimpleAdd/: SimpleAddGold.asm
projects/07/hacktrans/src/: main.rs
projects/09/MyGame/: Game.jack  Main.jack  Player.jack
projects/hacktrans/: Cargo.toml
projects/hacktrans/src/: command.rs  main.rs
projects/jack_compiler/: Cargo.toml
projects/jack_compiler/src/: lib.rs  main.rs  parser.rs  token.rs  tokenizer.rs
projects/jack_compiler/tests/: compare_tokenized_xml.rs  main.rs
projects/jack_compiler/tests/data/ConvertToBin/: correct_mine.md5sum
projects/jack_compiler/tests/data/Gold/ConvertToBin/: Main.vm
projects/jack_compiler/tests/data/Gold/Pong/: Ball.vm  Bat.vm  PongGame.vm
projects/jack_compiler/tests/data/Gold/Square2/: Square.vm  SquareGame.vm
