[package]
name = "jack_compiler"
version = "0.1.0"
authors = ["Masato Hori <rillomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0.126", features = ["derive"] }
erased-serde = "0.3.13"
# Using branch from pull request to serialize vector
# https://github.com/RReverser/serde-xml-rs/pull/154
#serde-xml-rs = "0.4.1"
serde-xml-rs = { git = "https://github.com/joemat/serde-xml-rs.git", rev = "3267cd21ac7a3d350d5cd195e987258398534392" }