[package]
name = "jack_compiler"
version = "0.1.0"
authors = ["Masato Hori <rillomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0.126", features = ["derive"] }
erased-serde = "0.3.13"
quick-xml = { version = "0.22", features = [ "serialize" ] }

[[test]]
name = "integration"
path = "tests/main.rs"